added bifurcation of salary and assets details